--- a/notes.html
+++ b/notes.html
@@ -11,7 +11,7 @@
       <a href="./index.html">home</a>
       <a href="./music.html">music</a>
       <a href="./photos.html">photos</a>
-      <a href="./projects.html">projects</a>
+      <a href="./code.html">code</a>
       <a href="./links.html">links</a>
       <a href="./notes.html">notes</a>
       <a href="./posts.html">posts</a>
@@ -20,8 +20,8 @@
     <ul>
       <li><a href="./logs/bookshelf.html">bookshelf</a></li>
       <li><a href="./logs/vidya.html">vidya</a></li>
-      <li><a href="./logs/tv.html">tv</a></li>
-      <li><a href="./logs/shows.html">shows</a></li>
+      <li><a href="./logs/tv.html">tv shows</a></li>
+      <li><a href="./logs/live-events.html">live events</a></li>
     </ul>
     <h3>recipes</h3>
     <ul>
