--- a/photos.html
+++ b/photos.html
@@ -12,13 +12,18 @@
       <a href="./index.html">home</a>
       <a href="./music.html">music</a>
       <a href="./photos.html">photos</a>
-      <a href="./projects.html">projects</a>
+      <a href="./code.html">code</a>
       <a href="./links.html">links</a>
       <a href="./notes.html">notes</a>
       <a href="./posts.html">posts</a>
     </div>
     <br>
     <div class="photodiv">
+      <h2>2023</h2>
+      <h2>2022</h2>
+      <h2>2021</h2>
+      <img src="./imgs/modest-mouse.jpg">
+      <h2>2020</h2>
       <img src="./imgs/acadia.jpg" alt="hey" class="enwiden">
       <img src="./imgs/arch.jpg">
       <img src="./imgs/arlee.jpg">
@@ -34,7 +39,6 @@
       <img src="./imgs/lighthouse.jpg">
       <img src="./imgs/mazda2.jpg">
       <img src="./imgs/mazda.jpg">
-      <img src="./imgs/modest-mouse.jpg">
       <img src="./imgs/obx.jpg">
       <img src="./imgs/sinclair.jpg">
       <img src="./imgs/snoqualmie.jpg">
