--- a/code.html
+++ b/code.html
@@ -11,19 +11,19 @@
       <a href="./index.html">home</a>
       <a href="./music.html">music</a>
       <a href="./photos.html">photos</a>
-      <a href="./projects.html">projects</a>
+      <a href="./code.html">code</a>
       <a href="./links.html">links</a>
       <a href="./notes.html">notes</a>
       <a href="./posts.html">posts</a>
     </div>
     <h3>JS</h3>
     <ul>
-      <li><a href="./projects/rps/index.html">rock paper scissors</a></li>
-      <li><a href="./projects/etch/index.html">etch-a-sketch</a></li>
+      <li><a href="./code/rps/index.html">rock paper scissors</a></li>
+      <li><a href="./code/etch/index.html">etch-a-sketch</a></li>
     </ul>
     <h3>rust</h3>
     <ul>
-      <li><a href="./projects/flappy/flappy.exe">flappy download</a></li>
+      <li><a href="./code/flappy/flappy.exe">flappy download</a></li>
     </ul>    
   </body>
 </html> 
