--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
       <a href="./index.html">home</a>
       <a href="./music.html">music</a>
       <a href="./photos.html">photos</a>
-      <a href="./projects.html">projects</a>
+      <a href="./code.html">code</a>
       <a href="./links.html">links</a>
       <a href="./notes.html">notes</a>
       <a href="./posts.html">posts</a>
     </div>
-    <h3>welcome to my website</h3>
-    <p>updated 7/1/23</p>
+    <h3>welcome to my website :-)</h3>
+    <p>updated 7/3/23</p>
     <p>mail@willforeman.net</p>
   </div>
   <br>
