--- a/index.html
+++ b/index.html
@@ -2,23 +2,24 @@
 <html>
 <head>
   <title>willforeman.net</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" type="image/ico" href="favicon.ico">
+  <link rel="stylesheet" href="assets/style.css">
+  <link rel="shortcut icon" type="image/ico" href="assets/favicon.ico">
 </head>
 <body>
   <div class="container">
     <h1>willforeman.net</h1>
     <div class="navbar">
       <a href="./index.html">home</a>
-      <a href="./music.html">music</a>
-      <a href="./photos.html">photos</a>
-      <a href="./code.html">code</a>
-      <a href="./links.html">links</a>
-      <a href="./notes.html">notes</a>
-      <a href="./posts.html">posts</a>
+      <a href="./pages/music.html">music</a>
+      <a href="./pages/photos.html">photos</a>
+      <a href="./pages/code.html">code</a>
+      <a href="./pages/links.html">links</a>
+      <a href="./pages/notes.html">notes</a>
+      <a href="./pages/posts.html">posts</a>
+      <a href="./pages/now.html">now</a>
     </div>
-    <h3>welcome to my website :-)</h3>
-    <p>updated 7/3/23</p>
+    <p>site updated 7/12/23</p>
+    <p>welcome to my website :-)</p>
     <p>mail@willforeman.net</p>
   </div>
   <br>
