--- a/recipes/bibimslop.html
+++ b/recipes/bibimslop.html
@@ -3,7 +3,7 @@
   <head>
     <title>bibimslop</title>
     <meta charset "UTF-8">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../assets/style.css">
   </head>
 
   <body>
