--- a/pages/now.html
+++ b/pages/now.html
@@ -16,7 +16,7 @@
       <a href="./posts.html">posts</a>
       <a href="./now.html">now</a>
     </div>
-    <p>updated 7/12/23</p>
+    <p>updated 7/23/23</p>
     <h3>fitness</h3>
       <ul>
 	<li>lifting at hyde park gym</li>
@@ -38,7 +38,7 @@
 	<li><a href="http://news.ycombinator.com">hacker news</a></li>
       </ul>
     <h3>playing</h3>
-      <p>kotor (pc)</p>
+      <p>red dead redemption 2 (pc)</p>
     <h3>watching</h3>
       <ul>
         <li>curb your enthusiasm</li>
