we inline block now (and new colors and sanshiro)

--- a/pages/now.html
+++ b/pages/now.html
@@ -16,26 +16,12 @@
       <a href="./posts.html">posts</a>
       <a href="./now.html">now</a>
     </div>
-    <p>updated 7/23/23</p>
-    <h3>fitness</h3>
-      <ul>
-	<li>lifting at hyde park gym</li>
-	<li>climbing at mesa rim austin</li>
-        <li><a href="http://i.imgur.com/EdSRs.png">running</a></li>
-      </ul>
-    <h3>writing</h3>
-      <ul>
-        <li>songs</li>
-      </ul>
-    <h3>cooking</h3>
+    <p>updated 7/25/23</p>
     <h3>reading</h3>
       <ul>
         <li>hands-on rust (wolverson)</li>
         <li>devil house (darnielle)</li>
-        <li>sanshiro (soseki)</li>
-        <li>bubble in the sun (knowlton)</li>
-	<li>dhalgren (delany)</li>
-	<li><a href="http://news.ycombinator.com">hacker news</a></li>
+	<li>the electric kool-aid acid test (wolfe)</li>
       </ul>
     <h3>playing</h3>
       <p>red dead redemption 2 (pc)</p>
@@ -47,7 +33,6 @@
       </ul>
     <h3>listening</h3>
       <ul>
-        <li><a href="http://last.fm/user/mothfingers">music</a></li>
         <li>truman (mccullough)</li>
         <li>the ryen russillo podcast</li>
         <li>the bill simmons podcast</li>
@@ -57,9 +42,8 @@
         <li>deep questions with cal newport</li>
         <li>the adam friedland show</li>
         <li>huberman lab</li>
+        <li><a href="http://last.fm/user/mothfingers">music</a></li>
       </ul>
-    <h3>working</h3>
-      <p>as a field applications engineer in semiconductors</p>
     </div>
 </body>
 </html>
