--- a/pages/photos.html
+++ b/pages/photos.html
@@ -16,6 +16,22 @@
   <br>
   <div class="photodiv">
     <h2>2023</h2>
+    <img src="../imgs/2023/2023-01-01-cumberland.jpg">
+    <img src="../imgs/2023/2023-01-07-nrgjd.JPG">
+    <img src="../imgs/2023/2023-01-15-spurs.jpg">
+    <img src="../imgs/2023/2023-01-20-margaritaville.jpg">
+    <img src="../imgs/2023/2023-01-31-icicles.jpg">
+    <img src="../imgs/2023/2023-02-01-ice.jpg">
+    <img src="../imgs/2023/2023-02-02-ice.jpg">
+    <img src="../imgs/2023/2023-02-11-henge.jpg">
+    <img src="../imgs/2023/2023-02-11-oil.jpg">
+    <img src="../imgs/2023/2023-02-12-eldorado.jpg">
+    <img src="../imgs/2023/2023-02-12-pete.jpg">
+    <img src="../imgs/2023/2023-03-08-sjsu.jpg">
+    <img src="../imgs/2023/2023-03-12-blue-bonnets.jpg">
+    <img src="../imgs/2023/2023-04-19-steak.jpg">
+    <img src="../imgs/2023/2023-05-04-cota.jpg">
+    <img src="../imgs/2023/2023-07-19-goat.jpg">
     <h2>2022</h2>
     <h2>2021</h2>
     <img src="../imgs/obx.jpg">
