2022 and 2021 photos added, removed now page

--- a/pages/music.html
+++ b/pages/music.html
@@ -10,23 +10,22 @@
     <a href="./links.html">links</a>
     <a href="./notes.html">notes</a>
     <a href="./posts.html">posts</a>
-    <a href="./now.html">now</a>
   </div>
   <h3>thomas no doki doki playground (2020)</h3>
-  <img src="../imgs/doki-doki.jpg">
+  <img src="../imgs/music/doki-doki.jpg">
   <div class="album-info">
     <a href="../files/doki-doki.zip">download</a>
     <a href="../lyrics/doki-doki-lyrics.html">lyrics</a>
   </div>
   <h3>comma splice (2018)</h3>
-  <img src="../imgs/comma-splice.jpg">
+  <img src="../imgs/music/comma-splice.jpg">
   <div class="album-info">
     <a href="../files/comma-splice.zip">download</a>
     <a href="../lyrics/comma-splice-lyrics.html">lyrics</a>
     <a href="../files/comma-splice-j-card.pdf">j-card</a>
   </div>
   <h3>TINY WORDS (2018)</h3>
-  <img src="../imgs/tiny-words.jpg">
+  <img src="../imgs/music/tiny-words.jpg">
   <div class="album-info">
     <a href="../files/tiny-words.zip">download</a>
     <a href="../lyrics/tiny-words-lyrics.html">lyrics</a>
