--- a/pages/photos.html
+++ b/pages/photos.html
@@ -11,50 +11,87 @@
     <a href="./links.html">links</a>
     <a href="./notes.html">notes</a>
     <a href="./posts.html">posts</a>
-    <a href="./now.html">now</a>
   </div>
   <br>
   <div class="photodiv">
     <h2>2023</h2>
     <img src="../imgs/2023/2023-01-01-cumberland.jpg">
     <img src="../imgs/2023/2023-01-07-nrgjd.JPG">
-    <img src="../imgs/2023/2023-01-15-spurs.jpg">
-    <img src="../imgs/2023/2023-01-20-margaritaville.jpg">
     <img src="../imgs/2023/2023-01-31-icicles.jpg">
-    <img src="../imgs/2023/2023-02-01-ice.jpg">
     <img src="../imgs/2023/2023-02-02-ice.jpg">
     <img src="../imgs/2023/2023-02-11-henge.jpg">
-    <img src="../imgs/2023/2023-02-11-oil.jpg">
     <img src="../imgs/2023/2023-02-12-eldorado.jpg">
     <img src="../imgs/2023/2023-02-12-pete.jpg">
     <img src="../imgs/2023/2023-03-08-sjsu.jpg">
     <img src="../imgs/2023/2023-03-12-blue-bonnets.jpg">
-    <img src="../imgs/2023/2023-04-19-steak.jpg">
     <img src="../imgs/2023/2023-05-04-cota.jpg">
     <img src="../imgs/2023/2023-07-19-goat.jpg">
+    <div class="photospacer">
     <h2>2022</h2>
+    <img src="../imgs/2022/2022-03-30-jeepney.jpg">
+    <img src="../imgs/2022/2022-05-27-bros.JPG">
+    <img src="../imgs/2022/2022-05-27-sat.JPG">
+    <img src="../imgs/2022/2022-06-02-car.jpg">
+    <img src="../imgs/2022/2022-06-02-cheers.jpg">
+    <img src="../imgs/2022/2022-06-02-cold.jpg">
+    <img src="../imgs/2022/2022-06-02-fording.jpg">
+    <img src="../imgs/2022/2022-06-02-poop-island.jpg">
+    <img src="../imgs/2022/2022-06-02-wpse.jpg">
+    <img src="../imgs/2022/2022-07-09-seagrove.jpg">
+    <img src="../imgs/2022/2022-07-25-pocahontas.jpg">
+    <img src="../imgs/2022/2022-07-28-charles.jpg">
+    <img src="../imgs/2022/2022-07-30-end.jpg">
+    <img src="../imgs/2022/2022-08-08-allianz.jpg">
+    <img src="../imgs/2022/2022-08-10-nim.jpg">
+    <img src="../imgs/2022/2022-08-13-ferris.jpg">
+    <img src="../imgs/2022/2022-08-17-prague.jpg">
+    <img src="../imgs/2022/2022-08-27-hertha.jpg">
+    <img src="../imgs/2022/2022-09-11-bros.jpg">
+    <img src="../imgs/2022/2022-09-11-mudman.jpg">
+    <img src="../imgs/2022/2022-09-11-shiners.jpg">
+    <img src="../imgs/2022/2022-09-24-cant.jpg">
+    <img src="../imgs/2022/2022-09-24-kellyn.jpg">
+    <img src="../imgs/2022/2022-09-24-moar.jpg">
+    <img src="../imgs/2022/2022-09-24-rays.jpg">
+    <img src="../imgs/2022/2022-09-24-sine.jpg">
+    <img src="../imgs/2022/2022-10-15-bevo.jpg">
+    <img src="../imgs/2022/2022-12-31-charleston.jpg">
+    <img src="../imgs/2022/2022-8-24-awash.jpg">
+    <div class="photospacer">
     <h2>2021</h2>
-    <img src="../imgs/obx.jpg">
-    <img src="../imgs/gateway.jpg">
-    <img src="../imgs/modest-mouse.jpg">
+    <img src="../imgs/2021/2021-04-17-obx.jpg">
+    <img src="../imgs/2021/2021-05-02-spring.jpg">
+    <img src="../imgs/2021/2021-05-27-car.jpg">
+    <img src="../imgs/2021/2021-06-19-bikes.jpg">
+    <img src="../imgs/2021/2021-07-08-8111.jpg">
+    <img src="../imgs/2021/2021-07-09-garrett.jpg">
+    <img src="../imgs/2021/2021-07-31-lemur.jpg">
+    <img src="../imgs/2021/2021-08-15-beach2.jpg">
+    <img src="../imgs/2021/2021-08-15-beach.jpg">
+    <img src="../imgs/2021/2021-10-02-bikepack.jpg">
+    <img src="../imgs/2021/2021-12-30-tractor.jpg">
+    <img src="../imgs/2021/gateway.jpg">
+    <img src="../imgs/2021/modest-mouse.jpg">
+    <img src="../imgs/2021/obx.jpg">
+    <div class="photospacer">
     <h2>2020</h2>
-    <img src="../imgs/acadia.jpg">
-    <img src="../imgs/arch.jpg">
-    <img src="../imgs/arlee.jpg">
-    <img src="../imgs/boat.jpg">
-    <img src="../imgs/carousel.jpg">
-    <img src="../imgs/cathedral.jpg">
-    <img src="../imgs/cows.jpg">
-    <img src="../imgs/dead-wood.jpg">
-    <img src="../imgs/devil-cactus.jpg">
-    <img src="../imgs/golden-gate.jpg">
-    <img src="../imgs/hollow-mountain.jpg">
-    <img src="../imgs/lighthouse.jpg">
-    <img src="../imgs/mazda2.jpg">
-    <img src="../imgs/mazda.jpg">
-    <img src="../imgs/sinclair.jpg">
-    <img src="../imgs/snoqualmie.jpg">
-    <img src="../imgs/twisters.jpg">
-    <img src="../imgs/walden.jpg">
+    <img src="../imgs/2020/acadia.jpg">
+    <img src="../imgs/2020/arch.jpg">
+    <img src="../imgs/2020/arlee.jpg">
+    <img src="../imgs/2020/boat.jpg">
+    <img src="../imgs/2020/carousel.jpg">
+    <img src="../imgs/2020/cathedral.jpg">
+    <img src="../imgs/2020/cows.jpg">
+    <img src="../imgs/2020/dead-wood.jpg">
+    <img src="../imgs/2020/devil-cactus.jpg">
+    <img src="../imgs/2020/golden-gate.jpg">
+    <img src="../imgs/2020/hollow-mountain.jpg">
+    <img src="../imgs/2020/lighthouse.jpg">
+    <img src="../imgs/2020/mazda2.jpg">
+    <img src="../imgs/2020/mazda.jpg">
+    <img src="../imgs/2020/sinclair.jpg">
+    <img src="../imgs/2020/snoqualmie.jpg">
+    <img src="../imgs/2020/twisters.jpg">
+    <img src="../imgs/2020/walden.jpg">
   </div>
 </div>
