trying responsive homepage image

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <a href="./pages/notes.html">notes</a>
     <a href="./pages/posts.html">posts</a>
   </div>
+  <span class="shrinkwrap">
+    <img src="./imgs/homepage/2022-05-27-will.JPG">
+  </span>
   <p>site updated 8/23/23</p>
   <p>welcome to my website :-)</p>
   <a href="mailto:mail@willforeman.net">mail@willforeman.net</a>
