font, tables, new logs, new links, reformatting, absolute paths, dropped recipes

--- a/pages/music.html
+++ b/pages/music.html
@@ -1,31 +1,30 @@
-<!DOCTYPE html>
 <title>music</title>
 <link rel="stylesheet" href="../assets/style.css">
 <div class="container">
   <h1>music</h1>
   <div class="navbar">
-    <a href="../index.html">home</a>
-    <a href="./music.html">music</a>
-    <a href="./photos.html">photos</a>
-    <a href="./links.html">links</a>
-    <a href="./notes.html">notes</a>
-    <a href="./posts.html">posts</a>
+    <a href="/index.html">home</a>
+    <a href="/pages/music.html">music</a>
+    <a href="/pages/photos.html">photos</a>
+    <a href="/pages/links.html">links</a>
+    <a href="/pages/notes.html">notes</a>
+    <a href="/pages/posts.html">posts</a>
   </div>
   <h3>thomas no doki doki playground (2020)</h3>
-  <img src="../imgs/music/doki-doki.jpg">
+  <img class="album" src="../imgs/music/doki-doki.jpg">
   <div class="album-info">
     <a href="../files/doki-doki.zip">download</a>
     <a href="../lyrics/doki-doki-lyrics.html">lyrics</a>
   </div>
   <h3>comma splice (2018)</h3>
-  <img src="../imgs/music/comma-splice.jpg">
+  <img class="album" src="../imgs/music/comma-splice.jpg">
   <div class="album-info">
     <a href="../files/comma-splice.zip">download</a>
     <a href="../lyrics/comma-splice-lyrics.html">lyrics</a>
     <a href="../files/comma-splice-j-card.pdf">j-card</a>
   </div>
   <h3>TINY WORDS (2018)</h3>
-  <img src="../imgs/music/tiny-words.jpg">
+  <img class="album" src="../imgs/music/tiny-words.jpg">
   <div class="album-info">
     <a href="../files/tiny-words.zip">download</a>
     <a href="../lyrics/tiny-words-lyrics.html">lyrics</a>
