--- a/pages/posts.html
+++ b/pages/posts.html
@@ -4,15 +4,15 @@
 <div class="container">
   <h1>posts</h1>
   <div class="navbar">
-    <a href="../index.html">home</a>
-    <a href="./music.html">music</a>
-    <a href="./photos.html">photos</a>
-    <a href="./links.html">links</a>
-    <a href="./notes.html">notes</a>
-    <a href="./posts.html">posts</a>
+    <a href="/index.html">home</a>
+    <a href="/pages/music.html">music</a>
+    <a href="/pages/photos.html">photos</a>
+    <a href="/pages/links.html">links</a>
+    <a href="/pages/notes.html">notes</a>
+    <a href="/pages/posts.html">posts</a>
   </div>
-  <h3>2022</h3>
+  <h3>2023</h3>
   <ul>
-    <li><a href="../posts/git-push-live-main.html">git push live main</a></li>
+    <li>under construction :-)</li>
   </ul>
 </div>
