--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 <div class="container">
   <h1>willforeman.net</h1>
   <div class="navbar">
-    <a href="./index.html">home</a>
-    <a href="./pages/music.html">music</a>
-    <a href="./pages/photos.html">photos</a>
-    <a href="./pages/links.html">links</a>
-    <a href="./pages/notes.html">notes</a>
-    <a href="./pages/posts.html">posts</a>
+    <a href="/index.html">home</a>
+    <a href="/pages/music.html">music</a>
+    <a href="/pages/photos.html">photos</a>
+    <a href="/pages/links.html">links</a>
+    <a href="/pages/notes.html">notes</a>
+    <a href="/pages/posts.html">posts</a>
   </div>
   <span class="shrinkwrap">
     <img src="./imgs/homepage/2022-05-27-will.JPG">
   </span>
-  <p>site updated 8/24/23</p>
+  <p>site updated 2023-09-02</p>
   <p>welcome to my website :-)</p>
   <a href="mailto:mail@willforeman.net">mail@willforeman.net</a>
 </div>
