--- a/pages/notes.html
+++ b/pages/notes.html
@@ -4,27 +4,22 @@
 <div class="container">
   <h1>notes</h1>
   <div class="navbar">
-    <a href="../index.html">home</a>
-    <a href="./music.html">music</a>
-    <a href="./photos.html">photos</a>
-    <a href="./links.html">links</a>
-    <a href="./notes.html">notes</a>
-    <a href="./posts.html">posts</a>
+    <a href="/index.html">home</a>
+    <a href="/pages/music.html">music</a>
+    <a href="/pages/photos.html">photos</a>
+    <a href="/pages/links.html">links</a>
+    <a href="/pages/notes.html">notes</a>
+    <a href="/pages/posts.html">posts</a>
   </div>
   <h3>logs</h3>
   <ul>
-    <li><a href="../logs/bookshelf.html">bookshelf</a></li>
+    <li><a href="../logs/albums.html">albums</a></li>
+    <li><a href="../logs/books.html">books</a></li>
     <li><a href="../logs/vidya.html">vidya</a></li>
-    <li><a href="../logs/tv.html">tv shows</a></li>
-    <li><a href="../logs/live-events.html">live events</a></li>
+    <li><a href="../logs/tv.html">tv</a></li>
+    <li><a href="../logs/shows.html">shows</a></li>
+    <li><a href="../logs/sports.html">sports</a></li>
+    <li><a href="../logs/classes.html">classes</a></li>
     <li><a href="../logs/movies.html">movies</a></li>
-  </ul>
-  <h3>recipes</h3>
-  <ul>
-    <li><a href="../recipes/saag.html">saag paneer</a></li>
-    <li><a href="../recipes/makhani.html">paneer makhani</a></li>
-    <li><a href="../recipes/bibimslop.html">keto mexican bibimslop</a></li>
-    <li><a href="../recipes/tccc.html">thai coconut chicken curry</a></li>
-    <li><a href="../recipes/udon.html">yaki udon</a></li>
   </ul>
 </div>
