--- a/pages/photos.html
+++ b/pages/photos.html
@@ -5,12 +5,12 @@
 <div class="container">
   <h1>photos</h1>
   <div class="navbar">
-    <a href="../index.html">home</a>
-    <a href="./music.html">music</a>
-    <a href="./photos.html">photos</a>
-    <a href="./links.html">links</a>
-    <a href="./notes.html">notes</a>
-    <a href="./posts.html">posts</a>
+    <a href="/index.html">home</a>
+    <a href="/pages/music.html">music</a>
+    <a href="/pages/photos.html">photos</a>
+    <a href="/pages/links.html">links</a>
+    <a href="/pages/notes.html">notes</a>
+    <a href="/pages/posts.html">posts</a>
   </div>
   <div class="photodiv">
     <h2>2023</h2>
