--- a/pages/photos.html
+++ b/pages/photos.html
@@ -93,6 +93,6 @@
     <img src="../imgs/2020/twisters.jpg">
     <img src="../imgs/2020/walden.jpg">
   </div>
-  <p class="whisper">all photos taken by me except the ones of me, taken
+  <p class="whisper">all photos by me except the ones of me, taken
 by anthony, jack, jackson, and RAGBRAI staff</p>
 </div>
