brighten the corners listened

--- a/pages/links.html
+++ b/pages/links.html
@@ -41,5 +41,6 @@
   <ul>
       <li><a href="http://github.com/bilfor">github</a></li>
       <li><a href="http://last.fm/user/mothfingers">last.fm</a></li>
+      <!-- add bandcamp? -->
   </ul>
 </div>
