logs to tables, GBV, removed tabs

--- a/lyrics/doki-doki-lyrics.html
+++ b/lyrics/doki-doki-lyrics.html
@@ -8,8 +8,17 @@
   <div class="container">
     <h1>thomas no doki doki playground lyrics</h1>
     <div class="box">
-<p>train cars and fast starts it hold where you want it to. everything trying to kill you can't get to you. oh I know you, not where you are. nothing you say could ever get this far. I'll wake you up when I can't get away. I'll break you down when I don't know what to say.</p>
-<p>I felt like my body should break so I broke it up. I tried in the saddest of ways but I fucked it up. I felt it all. tell me honestly, should I become what I deserve? tell me, what do I do when I wake up and can't find you? someday I will be what you want me to be when I'm alone and you can't see when I freak out, when I explode, when I am going crisis mode. when I leave my room I will forget what I should do. if I wanted to change, then I would.</p>
+<p>train cars and fast starts it hold where you want it to. everything trying 
+  to kill you can't get to you. oh I know you, not where you are. nothing you 
+  say could ever get this far. I'll wake you up when I can't get away. I'll 
+  break you down when I don't know what to say.</p>
+<p>I felt like my body should break so I broke it up. I tried in the saddest of
+  ways but I fucked it up. I felt it all. tell me honestly, should I become 
+  what I deserve? tell me, what do I do when I wake up and can't find you? 
+  someday I will be what you want me to be when I'm alone and you can't see 
+  when I freak out, when I explode, when I am going crisis mode. when I leave 
+  my room I will forget what I should do. if I wanted to change, then I would.
+  </p>
     </div>
   </div>
 </body>
