--- a/pages/links.html
+++ b/pages/links.html
@@ -13,7 +13,6 @@
   <h3>other people</h3>
   <ul>
     <li><a href="http://nathanielnoy.es">nathaniel noyes</a></li>
-    <li><a href="http://exit333.net">exit 333</a></li>
     <li><a href="http://lukesmith.xyz">luke smith</a></li>
     <li><a href="http://ranprieur.com">ran prieur</a></li>
     <li><a href="http://geohot.github.io/blog">geohot</a></li>
@@ -21,6 +20,7 @@
     <li><a href="https://100r.co/site/home.html">hundred rabbits</a></li>
     <li><a href="https://zacs.site/">zachary szewcyzk</a></li>
     <li><a href="https://damiengonot.com">damien gonot</a></li>
+    <li><a href="https://wills.co.tt">will scott</a></li>
   </ul>
   <h3>reads</h3>
   <ul>
