--- a/pages/notes.html
+++ b/pages/notes.html
@@ -8,8 +8,8 @@
     <a href="/pages/photos.html">photos</a>
     <a href="/pages/links.html">links</a>
     <a href="/pages/notes.html">notes</a>
-    <a href="/pages/posts.html">posts</a>
   </div>
+  <h3>notes</h3>
   <h3>logs</h3>
   <ul>
     <li><a href="../logs/albums.html">albums</a></li>
