added thea link

--- a/pages/links.html
+++ b/pages/links.html
@@ -20,6 +20,7 @@
     <li><a href="https://zacs.site/">zachary szewcyzk</a></li>
     <li><a href="https://damiengonot.com">damien gonot</a></li>
     <li><a href="https://wills.co.tt">will scott</a></li>
+    <li><a href="https://thea.codes">thea flowers</a></li>
   </ul>
   <h3>reads</h3>
   <ul>
