--- a/pages/photos.html
+++ b/pages/photos.html
@@ -91,5 +91,5 @@
     <img src="../imgs/2020/walden.jpg">
   </div>
   <p class="whisper">all photos by me except the ones of me, taken
-by anthony, jack, jackson, and RAGBRAI staff</p>
+by anthony, jack, jackson, and a ragbrai person</p>
 </div>
