--- a/pages/music.html
+++ b/pages/music.html
@@ -10,20 +10,26 @@
     <a href="/pages/notes.html">notes</a>
   </div>
   <h3>thomas no doki doki playground (2020)</h3>
-  <img class="album" src="../imgs/music/doki-doki.jpg">
+  <span class="shrinkwrap">
+    <img class="album" src="../imgs/music/doki-doki.jpg">
+  </span>
   <div class="album-info">
     <a href="../files/doki-doki.zip">download</a>
     <a href="../lyrics/doki-doki-lyrics.html">lyrics</a>
   </div>
   <h3>comma splice (2018)</h3>
-  <img class="album" src="../imgs/music/comma-splice.jpg">
+  <span class="shrinkwrap">
+    <img class="album" src="../imgs/music/comma-splice.jpg">
+  </span>
   <div class="album-info">
     <a href="../files/comma-splice.zip">download</a>
     <a href="../lyrics/comma-splice-lyrics.html">lyrics</a>
     <a href="../files/comma-splice-j-card.pdf">j-card</a>
   </div>
   <h3>TINY WORDS (2018)</h3>
-  <img class="album" src="../imgs/music/tiny-words.jpg">
+  <span class="shrinkwrap">
+    <img class="album" src="../imgs/music/tiny-words.jpg">
+  </span>
   <div class="album-info">
     <a href="../files/tiny-words.zip">download</a>
     <a href="../lyrics/tiny-words-lyrics.html">lyrics</a>
