responsive index part 2?

--- a/pages/music.html
+++ b/pages/music.html
@@ -15,6 +15,7 @@
   </div>
   <div class="album-info">
     <a href="../files/doki-doki.zip">download</a>
+    <span>/</span>
     <a href="../lyrics/doki-doki-lyrics.html">lyrics</a>
   </div>
   <h3>comma splice (2018)</h3>
@@ -23,7 +24,9 @@
   </div>
   <div class="album-info">
     <a href="../files/comma-splice.zip">download</a>
+    <span>/</span>
     <a href="../lyrics/comma-splice-lyrics.html">lyrics</a>
+    <span>/</span>
     <a href="../files/comma-splice-j-card.pdf">j-card</a>
   </div>
   <h3>TINY WORDS (2018)</h3>
@@ -32,6 +35,7 @@
   </div>
   <div class="album-info">
     <a href="../files/tiny-words.zip">download</a>
+    <span>/</span>
     <a href="../lyrics/tiny-words-lyrics.html">lyrics</a>
   </div>
 </div>
