--- a/pages/links.html
+++ b/pages/links.html
@@ -24,10 +24,11 @@
   </ul>
   <h3>reads</h3>
   <ul>
-    <li><a href="https://zerohplovecraft.substack.com/p/dont-make-me-think">dont make me think - zero hp lovecraft</a></li>
-    <li><a href="http://web.archive.org/web/20080105001815/http://carfreeuniverse.org/Members/jeffreysawyer/livinginquiry">living inquiry - jeffrey sawyer</a></li>
-    <li><a href="https://web.mit.edu/jmorzins/www/C-H-speech.html">commencement speech - bill watterson</a></li>
-    <li><a href="https://haseebq.com/my-ten-rules-for-negotiating-a-job-offer/">10 rules for negotiating a job offer - haseeb qureshi</a></li>
+    <li><a href="https://zerohplovecraft.substack.com/p/dont-make-me-think">dont make me think</a></li>
+    <li><a
+href="http://web.archive.org/web/20080105001815/http://carfreeuniverse.org/Members/jeffreysawyer/livinginquiry">jeffrey sawyer's living inquiry</a></li>
+    <li><a href="https://web.mit.edu/jmorzins/www/C-H-speech.html">bill watterson's commencement speech</a></li>
+    <li><a href="https://haseebq.com/my-ten-rules-for-negotiating-a-job-offer/">10 rules for negotiating a job offer</a></li>
   </ul>
   <h3>resources</h3>
   <ul>
