streaming links added to music

--- a/pages/music.html
+++ b/pages/music.html
@@ -14,6 +14,8 @@
     <img class="album" src="../imgs/music/doki-doki.jpg">
   </div>
   <div class="album-info">
+    <a href="https://soundcloud.com/spinnakerreef/sets/tnddp">stream</a>
+    <span>/</span>
     <a href="../files/doki-doki.zip">download</a>
     <span>/</span>
     <a href="../lyrics/doki-doki-lyrics.html">lyrics</a>
@@ -23,6 +25,8 @@
     <img class="album" src="../imgs/music/comma-splice.jpg">
   </div>
   <div class="album-info">
+    <a href="https://spinnakerreef.bandcamp.com/album/comma-splice">stream</a>
+    <span>/</span>
     <a href="../files/comma-splice.zip">download</a>
     <span>/</span>
     <a href="../lyrics/comma-splice-lyrics.html">lyrics</a>
@@ -34,6 +38,8 @@
     <img class="album" src="../imgs/music/tiny-words.jpg">
   </div>
   <div class="album-info">
+    <a href="https://spinnakerreef.bandcamp.com/album/tiny-words-2">stream</a>
+    <span>/</span>
     <a href="../files/tiny-words.zip">download</a>
     <span>/</span>
     <a href="../lyrics/tiny-words-lyrics.html">lyrics</a>
