better photos whisper

--- a/pages/photos.html
+++ b/pages/photos.html
@@ -90,6 +90,5 @@
     <img src="../imgs/2020/twisters.jpg">
     <img src="../imgs/2020/walden.jpg">
   </div>
-  <p class="whisper">all photos by me except the ones of me, taken
-by anthony, jack, jackson, and a ragbrai person</p>
+  <p class="whisper">photos of me taken by anthony, jack, jackson, and ragbrai</p>
 </div>
