--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <link rel="stylesheet" href="assets/style.css">
 <link rel="shortcut icon" type="image/ico" href="assets/favicon.ico">
 <div class="container">
-  <h1>willforeman.net</h1>
+  <span class="shrinkwrap">
+    <img src="assets/burning.gif"></a>
+  </span>
   <div class="navbar">
     <a href="/index.html">home</a>
     <a href="/pages/music.html">music</a>
@@ -13,7 +15,7 @@
   <span class="shrinkwrap">
     <img src="./imgs/homepage/2022-05-27-will.JPG">
   </span>
-  <p>last updated 2024-01-01</p>
+  <p>last updated 2024-01-04</p>
   <p>welcome to my site :-)</p>
   <a href="mailto:mail@willforeman.net">mail@willforeman.net</a>
 </div>
