2023 and 2024 photos, fix photo sizing, fix header size, standardize logs (no year headings)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="assets/style.css">
 <link rel="shortcut icon" type="image/ico" href="assets/favicon.ico">
 <div class="container">
-  <span class="shrinkwrap">
+  <span class="shrinkwrap2">
     <img src="assets/burning.gif"></a>
   </span>
   <div class="navbar">
@@ -15,7 +15,7 @@
   <span class="shrinkwrap">
     <img src="./imgs/homepage/2022-05-27-will.JPG">
   </span>
-  <p>last updated 2024-01-04</p>
+  <p>last updated 2024-02-01</p>
   <p>welcome to my site :-)</p>
   <a href="mailto:mail@willforeman.net">mail@willforeman.net</a>
 </div>
