--- a/pages/links.html
+++ b/pages/links.html
@@ -17,9 +17,7 @@
     <li><a href="http://geohot.github.io/blog">geohot</a></li>
     <li><a href="http://eater.net">ben eater</a></li>
     <li><a href="https://100r.co/site/home.html">hundred rabbits</a></li>
-    <li><a href="https://zacs.site/">zachary szewcyzk</a></li>
-    <li><a href="https://damiengonot.com">damien gonot</a></li>
-    <li><a href="https://wills.co.tt">will scott</a></li>
+    <li><a href="https://philipzucker.com">philip zucker</a></li>
     <li><a href="https://thea.codes">thea flowers</a></li>
   </ul>
   <h3>reads</h3>
@@ -32,8 +30,8 @@ href="http://web.archive.org/web/20080105001815/http://carfreeuniverse.org/Membe
   </ul>
   <h3>resources</h3>
   <ul>
-    <li><a href="http://copetti.org">copetti</a></li>
     <li><a href="http://nand2tetris.org">nand2tetris</a></li>
+    <li><a href="http://copetti.org">copetti</a></li>
     <li><a href="http://coranac.com/tonc/text/toc.htm">tonc</a></li>
     <li><a href="http://gbadev.org">gbadev</a></li>
     <li><a href="http://chibiakumas.com/6502/snes.php">chibiakumas</a></li>
