--- a/pages/photos.html
+++ b/pages/photos.html
@@ -10,17 +10,47 @@
     <a href="/pages/notes.html">notes</a>
   </div>
   <div class="photodiv">
+    <h2>2024</h2>
+    <img src="../imgs/2024/2024-01-01-house.jpg">
+    <img src="../imgs/2024/2024-01-12-beanies.jpeg">
+    <img src="../imgs/2024/2024-01-13-snowy.jpg">
+    <img src="../imgs/2024/2024-01-13-snowy-gordon.jpg">
+    <img src="../imgs/2024/2024-01-13-train.jpg">
+    <img src="../imgs/2024/2024-01-15-trudge.jpg">
+    <img src="../imgs/2024/2024-01-27-billy.jpg">
     <h2>2023</h2>
     <img src="../imgs/2023/2023-01-01-cumberland.jpg">
+    <img src="../imgs/2023/2023-01-15-spurs.jpg">
     <img src="../imgs/2023/2023-01-31-icicles.jpg">
     <img src="../imgs/2023/2023-02-02-ice.jpg">
     <img src="../imgs/2023/2023-02-11-henge.jpg">
-    <img src="../imgs/2023/2023-02-12-eldorado.jpg">
     <img src="../imgs/2023/2023-02-12-pete.jpg">
+    <img src="../imgs/2023/2023-02-12-eldorado.jpg">
     <img src="../imgs/2023/2023-03-08-sjsu.jpg">
     <img src="../imgs/2023/2023-03-12-blue-bonnets.jpg">
+    <img src="../imgs/2023/2023-04-29-squirrel.jpg">
     <img src="../imgs/2023/2023-05-04-cota.jpg">
+    <img src="../imgs/2023/2023-06-06-laboratory.jpg">
     <img src="../imgs/2023/2023-07-19-goat.jpg">
+    <img src="../imgs/2023/2023-08-29-rosebud.jpg">
+    <img src="../imgs/2023/2023-09-09-hostel.JPG">
+    <img src="../imgs/2023/2023-09-10-centro.jpg">
+    <img src="../imgs/2023/2023-09-10-popeyes.jpg">
+    <img src="../imgs/2023/2023-09-11-salute.jpg">
+    <img src="../imgs/2023/2023-09-12-lucha.jpg">
+    <img src="../imgs/2023/2023-09-12-learning.JPG">
+    <img src="../imgs/2023/2023-09-30-hamilton.jpg">
+    <img src="../imgs/2023/2023-10-15-caruse.jpg">
+    <img src="../imgs/2023/2023-10-18-cats.jpg">
+    <img src="../imgs/2023/2023-10-24-screamo.jpg">
+    <img src="../imgs/2023/2023-11-22-algernon.jpg">
+    <img src="../imgs/2023/2023-12-14-bigbend.jpg">
+    <img src="../imgs/2023/2023-12-15-immigration.jpg">
+    <img src="../imgs/2023/2023-12-15-rocks.jpg">
+    <img src="../imgs/2023/2023-12-16-bird.jpg">
+    <img src="../imgs/2023/2023-12-16-balmorhea.jpg">
+    <img src="../imgs/2023/2023-12-16-balmorhea2.jpg">
+    <img src="../imgs/2023/2023-12-23-lilbill.jpg">
     <div class="photospacer">
     <h2>2022</h2>
     <img src="../imgs/2022/2022-03-30-jeepney.jpg">
@@ -71,24 +101,23 @@
     <img src="../imgs/2021/obx.jpg">
     <div class="photospacer">
     <h2>2020</h2>
-    <img src="../imgs/2020/acadia.jpg">
-    <img src="../imgs/2020/arch.jpg">
-    <img src="../imgs/2020/arlee.jpg">
     <img src="../imgs/2020/boat.jpg">
+    <img src="../imgs/2020/acadia.jpg">
+    <img src="../imgs/2020/walden.jpg">
     <img src="../imgs/2020/carousel.jpg">
+    <img src="../imgs/2020/twisters.jpg">
+    <img src="../imgs/2020/dead-wood.jpg">
+    <img src="../imgs/2020/sinclair.jpg">
+    <img src="../imgs/2020/arlee.jpg">
+    <img src="../imgs/2020/snoqualmie.jpg">
+    <img src="../imgs/2020/lighthouse.jpg">
+    <img src="../imgs/2020/arch.jpg">
+    <img src="../imgs/2020/golden-gate.jpg">
+    <img src="../imgs/2020/mazda.jpg">
     <img src="../imgs/2020/cathedral.jpg">
     <img src="../imgs/2020/cows.jpg">
-    <img src="../imgs/2020/dead-wood.jpg">
-    <img src="../imgs/2020/devil-cactus.jpg">
-    <img src="../imgs/2020/golden-gate.jpg">
     <img src="../imgs/2020/hollow-mountain.jpg">
-    <img src="../imgs/2020/lighthouse.jpg">
-    <img src="../imgs/2020/mazda2.jpg">
-    <img src="../imgs/2020/mazda.jpg">
-    <img src="../imgs/2020/sinclair.jpg">
-    <img src="../imgs/2020/snoqualmie.jpg">
-    <img src="../imgs/2020/twisters.jpg">
-    <img src="../imgs/2020/walden.jpg">
+    <img src="../imgs/2020/devil-cactus.jpg">
   </div>
-  <p class="whisper">photos of me taken by anthony, jack, jackson, and ragbrai</p>
+  <p class="whisper">photos of me taken by kellyn, anthony, jack, jackson, and ragbrai</p>
 </div>
