--- a/pages/notes.html
+++ b/pages/notes.html
@@ -9,7 +9,13 @@
     <a href="/pages/links.html">links</a>
     <a href="/pages/notes.html">notes</a>
   </div>
-  <h3>notes</h3>
+  <h3>posts</h3>
+  <ul>
+    <li>
+      <span class="date">2024-03-16</span>
+      <a class="title" href="/posts/touch-mp3s.html">please let me touch the mp3s</a>
+    </li>
+  </ul>
   <h3>logs</h3>
   <ul>
     <li><a href="../logs/albums.html">albums</a></li>
