--- a/pages/notes.html
+++ b/pages/notes.html
@@ -9,22 +9,49 @@
     <a href="/pages/links.html">links</a>
     <a href="/pages/notes.html">notes</a>
   </div>
-  <h3>posts</h3>
-  <ul>
-    <li>
-      <span class="date">2024-03-16</span>
-      <a class="title" href="/posts/touch-mp3s.html">please let me touch the mp3s</a>
-    </li>
-  </ul>
+  <h3>notes</h3>
+  <div class = "datelist">
+    <ul>
+      <li>
+        <span class="date">2024-03-16</span>
+        <a class="title" href="/notes/touch-mp3s.html">please let me touch the mp3s</a>
+      </li>
+    </ul>
+  </div>
   <h3>logs</h3>
-  <ul>
-    <li><a href="../logs/albums.html">albums</a></li>
-    <li><a href="../logs/books.html">books</a></li>
-    <li><a href="../logs/classes.html">classes</a></li>
-    <li><a href="../logs/movies.html">movies</a></li>
-    <li><a href="../logs/shows.html">shows</a></li>
-    <li><a href="../logs/sports.html">sports</a></li>
-    <li><a href="../logs/tv.html">tv</a></li>
-    <li><a href="../logs/vidya.html">vidya</a></li>
-  </ul>
+  <div class = "datelist">
+    <ul>
+      <li>
+        <span class="date">2023-12-06</span>
+        <a class="title" href="../logs/albums.html">albums</a>
+      </li>
+      <li>
+        <span class="date">2024-03-13</span>
+        <a class="title" href="../logs/books.html">books</a></li>
+      <li>
+        <span class="date">2023-09-03</span>
+        <a class="title" href="../logs/classes.html">classes</a>
+      </li>
+      <li>
+        <span class="date">2024-03-15</span>
+        <a class="title" href="../logs/movies.html">movies</a>
+      </li>
+      <li>
+        <span class="date">2023-11-22</span>
+        <a class="title" href="../logs/shows.html">shows</a>
+      </li>
+      <li>
+        <span class="date">2023-01-15</span>
+        <a class="title" href="../logs/sports.html">sports</a>
+      </li>
+      <li>
+        <span class="date">2024-03-02</span>
+        <a class="title" href="../logs/tv.html">tv</a>
+      </li>
+      <li>
+        <span class="date">2024-03-15</span>
+        <a class="title" href="../logs/vidya.html">vidya</a>
+      </li>
+    </ul>
+  </div>
 </div>
