added image to touch-mp3s

--- a/notes/touch-mp3s.html
+++ b/notes/touch-mp3s.html
@@ -28,7 +28,7 @@
 <p><code>yay tagger &amp;&amp; tagger</code></p>
 <p>Tagger's GUI is pretty self explanatory. Select your directory to pull up all the songs, then edit them. Note that you can ctrl+click and shift+click the tracklist on the left to edit multiple files at once. It should look something like this when you're all done.</p>
 <!-- IMAGE 1 -->
-
+<img src="/imgs/notes/touch-mp3s/touch-mp3s-1.png">
 <p>You can share your freshly tagged files on <a href="https://www.slsknet.org/">Soulseek</a> to
 save others from having to do the same in the future.
 <a href="https://nicotine-plus.org/">Nicotine+</a> is really great, and much easier to use than SoulseekQt.</p>
