added annotatedtmg to links

--- a/pages/links.html
+++ b/pages/links.html
@@ -27,6 +27,7 @@ href="http://web.archive.org/web/20080105001815/http://carfreeuniverse.org/Membe
   </ul>
   <h3>resources</h3>
   <ul>
+    <li><a href="https://annotatedtmg.org">annotated tmg</a></li>
     <li><a href="http://nand2tetris.org">nand2tetris</a></li>
     <li><a href="http://copetti.org">copetti</a></li>
     <li><a href="http://coranac.com/tonc/text/toc.htm">tonc</a></li>
