--- a/pages/notes.html
+++ b/pages/notes.html
@@ -16,6 +16,10 @@
         <span class="date">2024-03-16</span>
         <a class="title" href="/notes/touch-mp3s.html">please let me touch the mp3s</a>
       </li>
+      <li>
+        <span class="date">2025-07-04</span>
+        <a class="title" href="/notes/beginning-chinese.html">beginning chinese audio</a>
+      </li>
     </ul>
   </div>
   <h3>logs</h3>
